--- a/appwriteAuth11/.env
+++ b/appwriteAuth11/.env
@@ -1,2 +1,2 @@
-APPWRITE_ENDPOINT = 'https://cloud.appwrite.io/v1'
-APPWRITE_PROJECT_ID = '68dccf9300363fe89138'
+APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+APPWRITE_PROJECT_ID=68dccf9300363fe89138
