--- a/appwriteAuth11/package.json
+++ b/appwriteAuth11/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-vector-icons/material-icons": "^12.3.0",
-    "@react-native/new-app-screen": "0.81.4",
+    "@react-native/new-app-screen": "^0.81.4",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@rneui/base": "^4.0.0-rc.7",
@@ -19,10 +19,11 @@
     "appwrite": "^20.1.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-config": "^1.5.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-snackbar": "^2.7.0"
+    "react-native-snackbar": "^2.7.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -40,6 +41,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
